<resources>
    <string name="acceptTermsAndConditions">I accept these Terms and Conditions of use.</string>
    <string name="app_name">someApp</string>
    <string name="contentDescription">content</string>
    <string name="createAccount">Create Account</string>
    <string name="credentialsNotCorrect">Your credentials are not correct!</string>
    <string name="dontHaveAnAccount">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="errorSavingEmail">An error occurred while updating your email.</string>
    <string name="fieldsNotValid">At least one of the fields is not valid!</string>
    <string name="genericError">An unexpected error occurred! Please try again later.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="login">Log in</string>
    <string name="loginWithFacebook">Log in with Facebook</string>
    <string name="loginWithGoogle">Log in with Google</string>
    <string name="nameAndSurname">Name and Surname</string>
    <string name="needAcceptTerms">To create the account you need to accept the Terms and Conditions of use!</string>
    <string name="noChangesRegistered">No changes have been registered!</string>
    <string name="noName">Don\'t you have a name? :)</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="savedData">Your data have been successfully saved!</string>
    <string name="searchUsers">Search Users</string>
    <string name="signedUp">Your account has been created! Please verify it from your email.</string>
    <string name="signUp">Sign Up</string>
    <string name="signUpHere">Sign up here :)</string>
    <string name="signUpWithFacebook">Sign up with Facebook</string>
    <string name="signUpWithGoogle">Sign up with Google</string>
    <string name="string">string</string>
    <string name="typeSomething">Type something to filter&#8230;</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
